test_regress/t/t_class_new_scoped.out
%Error: t/t_class_new_scoped.v:45:21: syntax error, unexpected new, expecting IDENTIFIER-for-type
   45 |       b = ClsNoArg::new;
      |                     ^~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_class_new_scoped.v:50:19: syntax error, unexpected new-then-paren, expecting IDENTIFIER-for-type
   50 |       b = ClsArg::new(20, 1);
      |                   ^~~
%Error: t/t_class_new_scoped.v:55:27: syntax error, unexpected new-then-paren, expecting IDENTIFIER-for-type
   55 |       b = ClsParam#(100)::new(33);
      |                           ^~~
%Error: t/t_class_new_scoped.v:60:27: syntax error, unexpected new-then-paren, expecting IDENTIFIER-for-type
   60 |       b = ClsParam#(200)::new(44);
      |                           ^~~
%Error: Exiting due to
